--- a/Offers/templates/Offers/base.html
+++ b/Offers/templates/Offers/base.html
@@ -4,7 +4,16 @@
 </head>
 
 <body>
-    <p>Base Template</p>
+    <h1>Portal Pracy</h1>
+    {% if user.is_authenticated %}
+    <h3>Yor name is: {{user.username}}</h3>
+    <a class="btn btn-primary" href="/accounts/logout/">Logout!</a>
+    {% else %}
+    <h3>Yor are not logged in.</h3>
+    <a class="btn btn-primary" href="/accounts/login/">Login!</a>
+    {% endif %}
+    <p>Base Template z którego będą dziedziczyły inne strony</p>
+
 </body>
 
 </html>
