--- a/Offers/templates/Offers/home.html
+++ b/Offers/templates/Offers/home.html
@@ -12,7 +12,7 @@
         <div id="login">
             {% if user.is_authenticated %}
             <p>Zalogowano jako <b>{{user.username}}</b></p>
-            <a class="btn btn-primary" href="/accounts/logout/">Wyloguj</a>
+            <a class="btn btn-primary" href="/logout/">Wyloguj</a>
             {% else %}
             <p>Nie jesteś zalogowany/a.</p>
             <a class="btn btn-primary" href="/accounts/login/">Zaloguj się</a>
