--- a/Offers/templates/Index/index.html
+++ b/Offers/templates/Index/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     </head>
     
@@ -75,7 +75,7 @@
     <!-- ***** Main Banner Area Start ***** -->
     <div class="main-banner" id="top">
         <video autoplay muted loop id="bg-video">
-            <source src="static/images/video.mp4" type="video/mp4" />
+            <source src="{% static 'images/video.mp4' %}" type="video/mp4" />
         </video>
 
         <div class="video-overlay header-text">
@@ -97,7 +97,7 @@
                 <div class="col-lg-6 offset-lg-3">
                     <div class="section-heading">
                         <h2>Featured <em>Jobs</em></h2>
-                        <img src="static/images/line-dec.png" alt="">
+                        <img src="{% static 'images/line-dec.png' %}" alt="">
                         <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</p>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="col-lg-4">
                     <div class="trainer-item">
                         <div class="image-thumb">
-                            <img src="static/images/product-1-720x480.jpg" alt="">
+                            <img src="{% static 'images/product-1-720x480.jpg' %}" alt="">
                         </div>
                         <div class="down-content">
                             <span> <sup>$</sup>70 000 </span>
@@ -124,7 +124,7 @@
                 <div class="col-lg-4">
                     <div class="trainer-item">
                         <div class="image-thumb">
-                            <img src="static/images/product-2-720x480.jpg" alt="">
+                            <img src="{% static 'images/product-2-720x480.jpg' %}" alt="">
                         </div>
                         <div class="down-content">
                             <span> <sup>$</sup>70 000 </span>
@@ -142,7 +142,7 @@
                 <div class="col-lg-4">
                     <div class="trainer-item">
                         <div class="image-thumb">
-                            <img src="static/images/product-3-720x480.jpg" alt="">
+                            <img src="{% static 'images/product-3-720x480.jpg' %}" alt="">
                         </div>
                         <div class="down-content">
                             <span> <sup>$</sup>70 000 </span>
@@ -174,7 +174,7 @@
                 <div class="col-lg-6 offset-lg-3">
                     <div class="section-heading dark-bg">
                         <h2>Read <em>About Us</em></h2>
-                        <img src="static/images/line-dec.png" alt="">
+                        <img src="{% static 'images/line-dec.png' %}" alt="">
                         <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</p>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                 <div class="col-lg-6 offset-lg-3">
                     <div class="section-heading">
                         <h2>Read our <em>Blog</em></h2>
-                        <img src="static/images/line-dec.png" alt="">
+                        <img src="{% static 'images/line-dec.png' %}" alt="">
                         <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</p>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
               <div class="col-lg-8">
                 <section class='tabs-content'>
                   <article id='tabs-1'>
-                    <img src="static/images/blog-image-1-940x460.jpg" alt="">
+                    <img src="{% static 'images/blog-image-1-940x460.jpg' %}" alt="">
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
 
                     <p><i class="fa fa-user"></i> John Doe &nbsp;|&nbsp; <i class="fa fa-calendar"></i> 27.07.2020 10:10 &nbsp;|&nbsp; <i class="fa fa-comments"></i>  15 comments</p>
@@ -226,7 +226,7 @@
                     </div>
                   </article>
                   <article id='tabs-2'>
-                    <img src="static/images/blog-image-2-940x460.jpg" alt="">
+                    <img src="{% static 'images/blog-image-2-940x460.jpg' %}" alt="">
                     <h4>Aspernatur excepturi magni, placeat rerum nobis magnam libero! Soluta.</h4>
                     <p><i class="fa fa-user"></i> John Doe &nbsp;|&nbsp; <i class="fa fa-calendar"></i> 27.07.2020 10:10 &nbsp;|&nbsp; <i class="fa fa-comments"></i>  15 comments</p>
                     <p>Integer dapibus, est vel dapibus mattis, sem mauris luctus leo, ac pulvinar quam tortor a velit. Praesent ultrices erat ante, in ultricies augue ultricies faucibus. Nam tellus nibh, ullamcorper at mattis non, rhoncus sed massa. Cras quis pulvinar eros. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -235,7 +235,7 @@
                     </div>
                   </article>
                   <article id='tabs-3'>
-                    <img src="static/images/blog-image-3-940x460.jpg" alt="">
+                    <img src="{% static 'images/blog-image-3-940x460.jpg' %}" alt="">
                     <h4>Sunt hic recusandae vitae explicabo quidem laudantium corrupti non adipisci nihil.</h4>
                     <p><i class="fa fa-user"></i> John Doe &nbsp;|&nbsp; <i class="fa fa-calendar"></i> 27.07.2020 10:10 &nbsp;|&nbsp; <i class="fa fa-comments"></i>  15 comments</p>
                     <p>Fusce laoreet malesuada rhoncus. Donec ultricies diam tortor, id auctor neque posuere sit amet. Aliquam pharetra, augue vel cursus porta, nisi tortor vulputate sapien, id scelerisque felis magna id felis. Proin neque metus, pellentesque pharetra semper vel, accumsan a neque.</p>
