--- a/Offers/templates/Index/index.html
+++ b/Offers/templates/Index/index.html
@@ -38,17 +38,7 @@
                         <ul class="nav">
                             <li><a href="{% url 'home' %}" class="active">Home</a></li>
                             <li><a href="{% url 'jobs' %}">Jobs</a></li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="about.html">About Us</a>
-                                    <a class="dropdown-item" href="team.html">Team</a>
-                                    <a class="dropdown-item" href="blog.html">Blog</a>
-                                    <a class="dropdown-item" href="testimonials.html">Testimonials</a>
-                                    <a class="dropdown-item" href="terms.html">Terms</a>
-                                </div>
-                            </li>
+                            <li><a href="{% url 'about' %}">About us</a></li>
                             {% if user.is_authenticated %}
                             <li><a>Logged in as <b>{{user.username}}</b></a></li>
                             <li><a href="/logout/">Log out</a></li>
@@ -163,7 +153,7 @@
     </section>
     <!-- ***** Cars Ends ***** -->
 
-    <section class="section section-bg" id="schedule" style="background-image: url(static/images/about-fullscreen-1-1920x700.jpg)">
+    <section class="section section-bg" id="schedule" style="background-image: url({% static 'images/banner-image-1-1920x500.jpg' %})">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
