--- a/Offers/templates/registration/register.html
+++ b/Offers/templates/registration/register.html
@@ -73,10 +73,20 @@
                       {% csrf_token %}
 
                         {% if form.errors %}
-                  <p>jakieś błędy</p>
+                  <p>{{form.errors}}</p>
                   {% endif %}
 
-                      {{form.as_p}}
+                      {{form.username.label}}
+                      {{form.username}}
+
+                      {{form.email.label}}
+                      {{form.email}}
+
+                      {{form.password1.label}}
+                      {{form.password1}}
+
+                      {{form.password2.label}}
+                      {{form.password2}}
 
                       <p><input type="submit"  value="Register"></p>
                       <input type="hidden" name="next" value="{{ next }}">
