--- a/Offers/templates/Offers/job-details.html
+++ b/Offers/templates/Offers/job-details.html
@@ -137,25 +137,26 @@
                   <article id='tabs-1'>
                     <h4>Job Description</h4>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio eum expedita nobis cum vitae totam voluptate temporibus nostrum, repellendus accusantium.</p>
+                    <p>{{ offer.description }}</p>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo hic quis quo tempora, totam non vero velit. Inventore, obcaecati placeat perspiciatis neque enim laudantium. Sit eaque, aliquid et nisi illo.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit nam placeat ut cumque ipsa iste, commodi omnis aperiam perferendis incidunt. Provident doloremque, quia labore eius adipisci asperiores voluptatum nisi porro corporis ex explicabo magnam eligendi, autem quae, voluptate et molestiae?</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae soluta architecto modi. Et ullam ipsam, tempore sequi nesciunt dignissimos animi odio eaque illum eligendi pariatur. Porro delectus a rem rerum ex similique fugit dolorem fugiat libero sint aliquam velit, eligendi adipisci fuga assumenda, dolorum, deserunt ea inventore quis voluptas accusantium omnis iure quia temporibus. Accusamus, adipisci facere ullam ea amet.</p>
                   </article>
 
                   <article id='tabs-2'>
                     <h4>About Employer</h4>
 
-                    <p class="lead"> <i class="fa fa-map-marker"></i> London </p>
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia doloremque sit, enim sint odio corporis illum perferendis, unde repellendus aut dolore doloribus minima qui ullam vel possimus magnam ipsa deleniti.</p> 
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ducimus ab numquam magnam aliquid, odit provident consectetur corporis eius blanditiis alias nulla commodi qui voluptatibus laudantium quaerat tempore possimus esse nam sed accusantium inventore? Sapiente minima dicta sed quia sunt?</p>
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum qui, corrupti consequuntur. Officia consectetur error amet debitis esse minus quasi, dicta suscipit tempora, natus, vitae voluptatem quae libero. Sunt nulla culpa impedit! Aliquid cupiditate, impedit reiciendis dolores, illo adipisci, omnis dolor distinctio voluptas expedita maxime officiis maiores cumque sequi quaerat culpa blanditiis. Quia tenetur distinctio rem, quibusdam officiis voluptatum neque!</p>
+                    <p class="lead"> <i class="fa fa-map-marker"></i> {{offer.location}} </p>
+
+<!--                        {% for company in offer.company %}-->
+<!--                            <p>cos tam</p>-->
+<!--                            <p>{{ company.company_name }}</p>-->
+<!--                        {% endfor %}-->
+
+                    <p>{{offer.company}}</p> <!TODO>
+
+                    <p>adsadasdas</p>
+
+                    <p>bla bla bla</p>
+
                    </article>
 
                   <article id='tabs-3'>
