--- a/Offers/templates/registration/register.html
+++ b/Offers/templates/registration/register.html
@@ -69,12 +69,31 @@
         </video>
         <div class="video-overlay header-text">
             <div class="caption">
+
+                <!-- Required meta tags -->
+                      <meta charset="utf-8">
+                      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                      <!-- reCAPTCHA API -->
+                      <script src='https://www.google.com/recaptcha/api.js?render={{6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY}}'></script>
+                      <title>Django - Google reCAPTCHA v3</title>
+
+                      <script>
+                          //global grecaptcha
+                          grecaptcha.ready(function() {
+                              grecaptcha.execute('{{6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY}}', {action: "/register/"}).then(function(token) {
+                                  document.getElementById('g-recaptcha-response').value = token;
+                              });
+                          });
+                      </script>
+
+
                   <form id="user_register" method="post" action="{% url 'register' %}">
                       {% csrf_token %}
 
                         {% if form.errors %}
                   <p>{{form.errors}}</p>
                   {% endif %}
+
 
                       {{form.username.label}}
                       {{form.username}}
@@ -88,8 +107,17 @@
                       {{form.password2.label}}
                       {{form.password2}}
 
+                      {{form.captcha}}
+
                       <p><input type="submit"  value="Register"></p>
                       <input type="hidden" name="next" value="{{ next }}">
+
+                       <!-- reCAPTCHA input -->
+                      <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
+                      <button type="submit">Submit</button>
+
+
+
                   </form>
                 </div>
             </div>
