--- a/Offers/templates/Index/about.html
+++ b/Offers/templates/Index/about.html
@@ -1,67 +1,8 @@
+{% extends 'Index/base.html' %}
 {% load static %}
-<html lang="en">
-
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <title>PHPJabbers.com</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  </head>
-    
-    <body>
-    
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-      <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-    </div>
-    <!-- ***** Preloader End ***** -->
-    
-    
-    <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="main-nav">
-                        <!-- ***** Logo Start ***** -->
-                        <a href="{% url 'home' %}" class="logo">Job Agency<em> Website</em></a>
-                        <!-- ***** Logo End ***** -->
-                        <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li><a href="{% url 'home' %}" class="active">Home</a></li>
-                            <li><a href="{% url 'jobs' %}">Jobs</a></li>
-                            <li><a href="{% url 'about' %}">About us</a></li>
-                            {% if user.is_authenticated %}
-                            <li><a>Logged in as <b>{{user.username}}</b></a></li>
-                            <li><a href="/logout/">Log out</a></li>
-                            {% else %}
-                            <li><a href="{% url 'login' %}">Log in</a></li>
-                            <li><a href="{% url 'register' %}">Register</a></li>
-                            {% endif %}
-                        </ul>
-                        <a class='menu-trigger'>
-                            <span>Menu</span>
-                        </a>
-                        <!-- ***** Menu End ***** -->
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- ***** Header Area End ***** -->
-
+{% block head %}
+{% endblock %}
+{% block body %}
     <section class="section section-bg" id="call-to-action" style="background-image: url({% static 'images/banner-image-1-1920x500.jpg' %})">
         <div class="container">
             <div class="row">
@@ -130,7 +71,7 @@
     <!-- ***** Our Classes End ***** -->
 
     <!-- ***** Call to Action Start ***** -->
-    <section class="section section-bg" id="call-to-action" style="background-image: url(assets/images/banner-image-1-1920x500.jpg)">
+    <section class="section section-bg" id="call-to-action" style="background-image: url({% static 'images/banner-image-1-1920x500.jpg' %})">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
@@ -138,7 +79,7 @@
                         <h2>Send us a <em>message</em></h2>
                         <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula, sit amet dapibus odio augue eget libero. Morbi tempus mauris a nisi luctus imperdiet.</p>
                         <div class="main-button">
-                            <a href="contact.html">Contact us</a>
+                            <a href="{% url 'contact' %}">Contact us</a>
                         </div>
                     </div>
                 </div>
@@ -146,38 +87,4 @@
         </div>
     </section>
     <!-- ***** Call to Action End ***** -->
-
-    <!-- ***** Footer Start ***** -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>
-                        Copyright © 2020 Company Name
-                        - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-   <!-- jQuery -->
-    <script src="{% static 'js/jquery-2.1.0.min.js' %}"></script>
-
-    <!-- Bootstrap -->
-    <script src="{% static 'js/popper.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-    <!-- Plugins -->
-    <script src="{% static 'js/scrollreveal.min.js' %}"></script>
-    <script src="{% static 'js/waypoints.min.js' %}"></script>
-    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-    <script src="{% static 'js/imgfix.min.js' %}"></script>
-    <script src="{% static 'js/mixitup.js' %}"></script>
-    <script src="{% static 'js/accordions.js' %}"></script>
-
-    <!-- Global Init -->
-    <script src="{% static 'js/custom.js' %}"></script>
-
-  </body>
-</html>
+{% endblock %}
