--- a/Offers/templates/Index/contact.html
+++ b/Offers/templates/Index/contact.html
@@ -1,78 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-
-    <title>PHPJabbers.com | Free Job Agency Website Template</title>
-
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-
-    <link rel="stylesheet" type="text/css" href="static/css/font-awesome.css">
-
-    <link rel="stylesheet" href="static/css/style.css">
-
-    </head>
-    
-    <body>
-    
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-      <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-    </div>
-    <!-- ***** Preloader End ***** -->
-    
-    
-    <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="main-nav">
-                        <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">Job Agency<em> Website</em></a>
-                        <!-- ***** Logo End ***** -->
-                        <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="jobs.html">Jobs</a></li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-                              
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="about.html">About Us</a>
-                                    <a class="dropdown-item" href="team.html">Team</a>
-                                    <a class="dropdown-item" href="blog.html">Blog</a>
-                                    <a class="dropdown-item" href="testimonials.html">Testimonials</a>
-                                    <a class="dropdown-item" href="terms.html">Terms</a>
-                                </div>
-                            </li>
-                            <li><a href="contact.html" class="active">Contact</a></li> 
-                        </ul>        
-                        <a class='menu-trigger'>
-                            <span>Menu</span>
-                        </a>
-                        <!-- ***** Menu End ***** -->
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- ***** Header Area End ***** -->
-
-    <section class="section section-bg" id="call-to-action" style="background-image: url(static/images/banner-image-1-1920x500.jpg)">
+{% extends 'Index/base.html' %}
+{% load static %}
+{% block head %}
+{% endblock %}
+{% block body %}
+    <section class="section section-bg" id="call-to-action" style="background-image: url({% static 'images/banner-image-1-1920x500.jpg' %})">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
@@ -94,7 +25,7 @@
                 <div class="col-lg-6 offset-lg-3">
                     <div class="section-heading">
                         <h2>contact <em> info</em></h2>
-                        <img src="static/images/line-dec.png" alt="waves">
+                        <img src="{% static 'images/line-dec.png' %}" alt="waves">
                         
                     </div>
                 </div>
@@ -143,7 +74,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
-                    <div class="contact-form section-bg" style="background-image: url(static/images/contact-1-720x480.jpg)">
+                    <div class="contact-form section-bg" style="background-image: url({% static 'images/contact-1-720x480.jpg' %})">
                         <form id="contact" action="" method="post">
                           <div class="row">
                             <div class="col-md-6 col-sm-12">
@@ -179,38 +110,4 @@
         </div>
     </section>
     <!-- ***** Contact Us Area Ends ***** -->
-    
-    <!-- ***** Footer Start ***** -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>
-                        Copyright © 2020 Company Name
-                        - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- jQuery -->
-    <script src="static/js/jquery-2.1.0.min.js"></script>
-
-    <!-- Bootstrap -->
-    <script src="static/js/popper.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-
-    <!-- Plugins -->
-    <script src="static/js/scrollreveal.min.js"></script>
-    <script src="static/js/waypoints.min.js"></script>
-    <script src="static/js/jquery.counterup.min.js"></script>
-    <script src="static/js/imgfix.min.js"></script>
-    <script src="static/js/mixitup.js"></script>
-    <script src="static/js/accordions.js"></script>
-    
-    <!-- Global Init -->
-    <script src="static/js/custom.js"></script>
-
-  </body>
-</html>
+{% endblock %}
