--- a/Offers/templates/Offers/job-details.html
+++ b/Offers/templates/Offers/job-details.html
@@ -128,5 +128,5 @@
             </div>
         </div>
     </section>
-    <!-- ***** Fleet Ends ***** -->
+    <!-- ***** Fleet Ends *x**** -->
 {% endblock %}
