--- a/Offers/templates/Index/base.html
+++ b/Offers/templates/Index/base.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <title>DjangoJobPortal.com</title>
+    <title>Django Job Portal</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -33,7 +33,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="{% url 'home' %}" class="logo">Job Agency<em> Website</em></a>
+                        <a href="{% url 'home' %}" class="logo">Django <em>Job</em> Portal</a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
@@ -66,8 +66,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>
-                        Copyright © 2020 Company Name
-                        - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
+                        Made by Patrycja Biryło, Rafał Ciupek, Arkadiusz Żebrowski - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></a>
                     </p>
                 </div>
             </div>
