--- a/Offers/templates/registration/register.html
+++ b/Offers/templates/registration/register.html
@@ -57,9 +57,9 @@
                       <!-- {{form.captcha}}  zdubluje sie-->
 
                       <div class="g-recaptcha" data-sitekey="6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY" ></div>
+                      <!--<button type="submit" class="btn btn-primary" >Register</button>-->
+                       <p><input type="submit"  value="Register"></p>
                       <input type="hidden" name="next" value="{{ next }}">
-                      <button type="submit" class="btn btn-primary" >Register</button>
-
 
                       <!--
                       <p><input type="submit" class="btn btn-primary">Register</p>
